istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
    - "safir-argocd.b3lab.org"
  - port:
      name: https
      number: 443
      protocol: HTTPS
#    tls:
#      mode: SIMPLE
#      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
#      privateKey: /etc/istio/ingressgateway-certs/tls.key
    tls:
      mode: PASSTHROUGH
    hosts:
    - "safir-argocd.b3lab.org"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-virtual-service
  namespace: argocd
spec:
  hosts:
  - "safir-argocd.b3lab.org"
  gateways:
  - argocd-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - "safir-argocd.b3lab.org"
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 443
